bk_ida/gccida/c0/read_filename_string
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_filename_string/src/cppfiles.c:1345:13: error: expected identifier or '('
 struct set = alloc; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_filename_string/src/cppfiles.c:1346:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)ch_0] & 0xC00) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_filename_string/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_filename_string/src/cppfiles.c:1348:13: error: expected identifier or '('
 struct set = alloc + 1; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_filename_string/src/cppfiles.c:1355:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v4 = ~( ( sch_istable[( unsigned __int8)ch_0a] & 0xC00) != 0); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_filename_string/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_filename_string/src/cppfiles.c:1358:7: error: expected expression
if (  struct set - alloc == len ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_filename_string/src/cppfiles.c:1362:13: error: expected identifier or '('
 struct set = &alloc[len / 2]; 
            ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/read_filename_string/src/obj/cppfiles.o] Error 1
